allow complete document to be uploaded via post endpoint (#114)